[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/objects/ThrowObjects/LivingObjects/PathFinder.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/objects/ThrowObjects/LivingThrowObject/Enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/objects/ThrowObjects/Guns/Pistol.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
resource_name = "Kick"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_Kick"
} ]
}

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
MaxHp = 150
SpawnWeapon = ExtResource( 3 )

[node name="NavigationAgent2D" parent="." index="3"]
path_max_distance = 100.0

[node name="PathTimer" type="Timer" parent="." index="5"]
wait_time = 0.1
autostart = true

[node name="ShootTimer" type="Timer" parent="." index="6"]
autostart = true

[node name="StateChangeTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="PointToTarget" parent="." index="8"]
enabled = true
collision_mask = 7

[node name="JunkDetection" type="Area2D" parent="." index="9"]
position = Vector2( 0, 46 )
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="JunkDetection" index="0"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="10"]
anims/Kick = SubResource( 2 )

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="StateChangeTimer" to="." method="_on_StateChangeTimer_timeout"]
[connection signal="body_entered" from="JunkDetection" to="." method="_on_JunkDetection_body_entered"]
